# django_notes

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml
django_notes/: settings.py  urls.py
django_notes/tests/: asgi_wsgi_test.py
notes/: admin.py  models.py
notes/api/: urls.py
notes/api/serializers/: __init__.py  auth.py  notes.py  users.py
notes/api/views/: __init__.py  auth.py  notes.py  users.py
notes/migrations/: 0001_initial.py  0002_alter_note_created_at.py
notes/tests/: auth_test.py  conftest.py  model_test.py  note_test.py  users_test.py
